[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/texture/clearscreen.png" type="Texture" id=2]
[ext_resource path="res://scene/GameUI.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/pixelate

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result to godotshaders.com.
*/

shader_type canvas_item;

uniform int amount = 40;

void fragment()
{
	vec2 grid_uv = round(UV * float(amount)) / float(amount);
	
	vec4 text = texture(TEXTURE, grid_uv);
	
	COLOR = text;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 300

[node name="GameUI" type="Node2D"]
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 2 )
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 600, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Game" parent="ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="ThrowLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
normal = ExtResource( 2 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
